# grokmacos-better-version

./: .editorconfig  .gitattributes  .gitignore  BUILD_AND_TEST_VOICE_UX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  RELEASE_NOTES_1.0.79.txt  RELEASE_NOTES_1.0.83.txt  SECURITY.md  STT_TIMING_FIX.md  TESTING.md  UNIVERSAL_BINARY_GUIDE.md  VOICE_TEXT_FIELD_FOCUS_FIX.md  VOICE_UX_IMPROVEMENTS.md  appcast.xml  deny.toml  package-dmg.sh  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  performance.yml
.github/workflows/: audit.yml  ci.yml  lint-actions.yml  release.yml
GrokApp.xcodeproj/: project.pbxproj
GrokApp.xcodeproj/xcshareddata/xcschemes/: Grok.xcscheme
GrokChat/: Grok.entitlements  NOTARIZED-RELEASE-WORKFLOW.md  Package.swift  README.md  RELEASE-WORKFLOW.md  RELEASE_WORKFLOW_2025.md  VOICE_INTEGRATION_GUIDE.md  build-dmg.sh  build.sh  create-dmg-from-archive.sh  create-dmg-now.sh  deploy-notarized.sh  release.sh  release_repackage.sh  xai_voice_docs.md
GrokChat/GrokApp.xcodeproj/: project.pbxproj
GrokChat/GrokApp.xcodeproj/xcshareddata/xcschemes/: Grok.xcscheme
GrokChat/Sources/: AppDelegate.swift  DeveloperRootView.swift  Info.plist  SettingsWindow.swift  main.swift
GrokChat/Sources/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
GrokChat/Sources/Assets.xcassets/ToolbarGrokIcon.imageset/: Contents.json
GrokChat/Sources/Managers/: HotKeyManager.swift  VoiceManager.swift
GrokChat/Sources/Models/: APIModels.swift  Message.swift
GrokChat/Sources/Services/: SettingsManager.swift
GrokChat/Sources/ViewModels/: ChatViewModel.swift
GrokChat/Sources/Views/: ChatView.swift  ContentView.swift
GrokChat/Tests/: GrokChatTests.swift
GrokChat/scripts/: deploy-release.sh
Sources/: AppDelegate.swift  Info.plist  InputWindow.swift
Sources/Assets.xcassets/xAILogo.imageset/: Contents.json
Sources/Managers/: UpdateManager.swift
Sources/Services/: GrokAPIService.swift
Sources/Utils/: KeychainHelper.swift
Sources/Views/: SettingsView.swift
benches/: storage.rs
docs/: ELITE_REVIEW.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md
docs/adr/: 0001-rewrite-in-rust.md  0002-use-xtask.md  0003-release-model.md  0004-result-queued-sse-decoders.md  0005-redb-plus-tantivy.md  0006-ws-keepalive-and-watchdog.md  README.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/anthropic_decoder/: golden_text.sse  golden_tool_use.sse
fuzz/corpus/sse_decoder/: golden_with_crlf.sse  golden_xai.sse
fuzz/fuzz_targets/: anthropic_decoder.rs  sse_decoder.rs
packaging/: Entitlements.plist
scripts/: prepare-public-push.sh  push-private.sh  verify-repos.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  paths.rs  secrets.rs  theme.rs
src/services/: anthropic.rs  audio.rs  chat.rs  embeddings.rs  export.rs  local.rs  mod.rs  openai.rs  providers.rs  sse.rs  tests.rs  voice.rs
src/storage/: mod.rs  search.rs
src/ui/: chat_view.rs  mod.rs  palette.rs  perf_dashboard.rs  settings_view.rs  sidebar.rs  toast.rs  waveform.rs
supply-chain/: config.toml
xtask/: Cargo.toml  build.rs
xtask/src/: ci_driver.rs  commands.rs  mac.rs  main.rs
