[package]
name = "grok-insane"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Cross-platform high-performance desktop client for xAI Grok with voice, search, and multi-provider support."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "grok-insane"
path = "src/main.rs"

[features]
default = []
# Local semantic embeddings for RAG over chat history. Pulls a large ONNX runtime dep
# and downloads model weights on first use, so it is opt-in.
rag = ["dep:fastembed"]
# Global system-wide hotkeys (e.g. ⌘⇧V to toggle voice).
hotkeys = ["dep:global-hotkey"]
# Plugin host via WebAssembly (stub today, full surface area later).
plugins = ["dep:wasmtime"]

[dependencies]
# --- UI ---
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["all_loaders"] }

# --- Async runtime + networking ---
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# --- Persistence + search ---
redb = "2.2"
tantivy = "0.22"
bincode = "1.3"

# --- Audio ---
cpal = "0.15"
rubato = "0.16"

# --- Serialization / models ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"

# --- Security ---
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
zeroize = { version = "1", features = ["derive"] }

# --- Errors + logging ---
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# --- Misc utility ---
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"
dirs = "5"
directories = "5"
crossbeam-channel = "0.5"
arc-swap = "1"
humantime = "2"

# --- Optional / feature-gated ---
fastembed = { version = "4", optional = true }
global-hotkey = { version = "0.6", optional = true }
wasmtime = { version = "26", optional = true, default-features = false, features = ["cranelift", "async"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.dev]
opt-level = 1            # Debug builds still fast enough for UI iteration.
incremental = true
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Heavy deps benefit from optimisation even in dev builds.
[profile.dev.package."*"]
opt-level = 3
