[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"

[package]
name = "grok-insane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-platform high-performance desktop client for xAI Grok with voice, search, and multi-provider support."
publish = false

[lib]
name = "grok_insane"
path = "src/lib.rs"

[[bin]]
name = "grok-insane"
path = "src/main.rs"

[[bench]]
name = "storage"
harness = false

[features]
default = []
# Local semantic embeddings for RAG over chat history. Pulls a large ONNX runtime dep
# and downloads model weights on first use, so it is opt-in.
rag = ["dep:fastembed"]
# Global system-wide hotkeys (e.g. ⌘⇧V to toggle voice).
hotkeys = ["dep:global-hotkey"]
# Plugin host via WebAssembly. Reserved feature name — the implementation lives
# on a follow-up branch. Was previously gated by `wasmtime = "26"`, but that
# version has 15 outstanding RUSTSEC advisories (sandbox escapes, OOB writes,
# data leaks). We refuse to ship that on the supply chain, even feature-gated.
# When the plugin host work lands it must pull a current wasmtime (>= 38) and
# re-enable this dep.
plugins = []
# High-quality voice resampling via rubato's sinc-interpolation engine. Off
# by default (the in-tree LinearResampler is fine for the 24 kHz voice
# path); flip on with `--features hq-resample` for studio-grade output and
# accept the extra binary size (~200 KB) + first-batch latency cost of the
# sinc filter table generation.
hq-resample = ["dep:rubato"]

[dependencies]
# --- UI ---
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
    "wayland",
    "x11",
] }
egui = "0.34"
# Direct dep purely as a feature-enabler: `all_loaders` makes
# `egui_commonmark` able to render embedded images. The crate is *used*
# transitively; declaring it here is what flips the feature on. Listed in
# `[package.metadata.cargo-machete] ignored = [...]` to suppress the
# false-positive "unused dependency" warning.
egui_extras = { version = "0.34", features = ["all_loaders"] }
egui_commonmark = { version = "0.23", default-features = false, features = [
    "better_syntax_highlighting",
    "pulldown_cmark",
] }
egui-phosphor = "0.12"

# --- Async runtime + networking ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-trait = "0.1"

# --- Persistence + search ---
redb = "2.2"
tantivy = "0.22"
# bincode 1.x is unmaintained (RUSTSEC-2025-0141). 2.x is the supported line
# with a configuration-based API; we use the serde compatibility shim so the
# call sites stay tiny.
bincode = { version = "2", features = ["serde"] }

# --- Audio ---
cpal = "0.17"
# Optional high-quality resampler. Gated behind `hq-resample` so the
# default build stays small (no FFT runtime, no num-complex tree). When
# enabled, services::audio swaps in a sinc-interpolation engine via
# rubato::SincFixedIn. The in-tree LinearResampler covers the no-feature
# build.
rubato = { version = "0.16", optional = true }

# --- Serialization / models ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"

# --- Security ---
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
zeroize = { version = "1", features = ["derive"] }

# --- Errors + logging ---
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# --- Misc utility ---
parking_lot = "0.12"
once_cell = "1"
directories = "5"
crossbeam-channel = "0.5"
arc-swap = "1"
sysinfo = { version = "0.37", default-features = false, features = ["system"] }

# --- Optional / feature-gated ---
fastembed = { version = "4", optional = true }
global-hotkey = { version = "0.8", optional = true }
# wasmtime is intentionally NOT a dependency — see the `plugins` feature comment.

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
# Criterion for regression-detecting micro-benches over hot storage paths.
# Default features include `cargo_bench_support` and stable plotters; we
# disable plotters (no graphviz dep in CI) and keep just the cargo bench
# integration so `cargo bench` works.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.dev]
opt-level = 1            # Debug builds still fast enough for UI iteration.
incremental = true
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Heavy deps benefit from optimisation even in dev builds.
[profile.dev.package."*"]
opt-level = 3

# Tell `cargo-machete` which deps are intentional even though they appear
# unused under static analysis. Keep this list tight; every entry is a real
# justification, not a wave-through.
[package.metadata.cargo-machete]
ignored = [
    # Listed as a direct dep to enable its `all_loaders` feature, which
    # `egui_commonmark` consumes at runtime to render embedded images. No
    # `use egui_extras::*` anywhere — that's the point.
    "egui_extras",
    # Optional feature-gated dep (off by default). When `--features hotkeys`
    # is enabled, the global-hotkey crate is wired in; otherwise it sits in
    # Cargo.toml as a future-proof declaration only.
    "global-hotkey",
]
