[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Build, lint, test, package, and dev helpers for grok-insane — replaces the shell scripts that would normally live in /scripts."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
